# CPPTemplate

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindGMock.cmake  GTestTarget.cmake  TestTarget.cmake
